# ProjectAx

./: .env  .gitignore  README.md  main.py  pyproject.toml  rAIO.sh  rAIOm.sh  rAIOmp.sh
StuffsWeNeed/: _db.py  combat.py  defaultstuff.py  embeds.py  perms.py
StuffsWeNeed/jsons/: art.json  profile.json
StuffsWeNeed/jsons/Profile/: CharacterFirstNameFemale.json  CharacterFirstNameMale.json  CharacterLastName.json  FemaleLooks.json  MaleLooks.json
cogs/: admin.py  config.py  help.py  hunt.py  inventory.py  misc.py  moderation.py  owneronly.py  profile.py  pvp.py  training.py
tools/: _c.py  _db.py  _json.py  combat.py  embeds.py  perms.py  tools.py  wembeds.py
tools/jsons/: art.json  config.json  enemies.json  gamemodes.json  help.json  profile.json
